--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -7,6 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Docker login
+        env: 
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}  
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - name: Docker build Python
         run: |
           docker build ./FASTAPI -t image/python:1.0.0
