--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,7 +12,7 @@ jobs:
           DOCKER_USER: ${{ secrets.DOCKER_USER }}  
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
         run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io
       - name: Docker build Python
         run: |
           docker build ./FASTAPI -t image/python:1.0.0
